--- a/app/i18n/wallet.pt.i18n.json
+++ b/app/i18n/wallet.pt.i18n.json
@@ -23,8 +23,8 @@
             "texts": {
                 "note": "Nota",
                 "balance": "Saldo",
-                "connectionErrorMist": "Não foi possível conectar. Inicie Geth usando:<br><br><small><code>__node__</code><br><br> Assegure-se que o endereço IPC está configurado corretamente desta forma: <br><code>geth --datadir ... --ipcpath /Users/&lt;yourUser&gt;/Library/Ethereum/geth.ipc</code><br>or<br><code>geth --datadir ... --ipcpath /Users/&lt;yourUser&gt;/.ethereum/geth.ipc</code>. <br><br>Opcional: <code>--unlock &lt;suaConta&gt;.</code></small>",
-                "connectionErrorBrowser": "Não foi possível conectar. Por favor inicie Geth com as seguintes opções: <br><br><small><code>__node__</code><br><br>Opcional: <code>--unlock &lt;suaConta&gt;.</code></small>",
+                "connectionErrorMist": "Não foi possível conectar. Inicie Gsoil usando:<br><br><small><code>__node__</code><br><br> Assegure-se que o endereço IPC está configurado corretamente desta forma: <br><code>gsoil --datadir ... --ipcpath /Users/&lt;yourUser&gt;/Library/Soil/gsoil.ipc</code><br>or<br><code>gsoil --datadir ... --ipcpath /Users/&lt;yourUser&gt;/.ethereum/gsoil.ipc</code>. <br><br>Opcional: <code>--unlock &lt;suaConta&gt;.</code></small>",
+                "connectionErrorBrowser": "Não foi possível conectar. Por favor inicie Gsoil com as seguintes opções: <br><br><small><code>__node__</code><br><br>Opcional: <code>--unlock &lt;suaConta&gt;.</code></small>",
                 "pendingConfirmationsBadge": "Aguardando confirmação",
                 "nodeSyncing": "__blockDiff__ blocos restantes",
                 "blockReceived": "Novo bloco recebido",
@@ -55,7 +55,7 @@
                 "title": "Escolha uma conta"
             },
             "testnetWallet": {
-                "walletNeedsDeployment": "Você parece estar em uma rede de teste.<br><br> Precisamos fazer o upload de um contrato que será usado como base para as carteiras. <br><br><small><code>__account__</code></small><br><br><em> Assegure-se que a conta acima tem ao menos 1 ether!</em>",
+                "walletNeedsDeployment": "Você parece estar em uma rede de teste.<br><br> Precisamos fazer o upload de um contrato que será usado como base para as carteiras. <br><br><small><code>__account__</code></small><br><br><em> Assegure-se que a conta acima tem ao menos 1 soil!</em>",
                 "testnetWalletDeployed": "O código fonte da carteira na sua rede privada foi colocado no endereço seguinte:<br><br><small><code>__address__</code></small>."
             },
             "addToken": {
@@ -79,8 +79,8 @@
             "defaultName": "Sem nome",
             "creating": "Criando",
             "importing": "Importando",
-            "accountNote": "Contas podem armazenar ether mas não exibem transações recebidas. Para tal, <a href=\"/account/new\">crie um contrato de carteira</a>.",
-            "walletNote": "Algumas exchanges tem dificuldades técnicas com transações enviadas de contratos. Passe o ether para uma conta simples antes",
+            "accountNote": "Contas podem armazenar soil mas não exibem transações recebidas. Para tal, <a href=\"/account/new\">crie um contrato de carteira</a>.",
+            "walletNote": "Algumas exchanges tem dificuldades técnicas com transações enviadas de contratos. Passe o soil para uma conta simples antes",
             "addressCopiedToClipboard": "Copiado para área de transferência",
             "addressNotCopiedToClipboard": "Erro ao copiar endereço. Tente novamente.",
             "qrCodeLabel": "Abra um aplicativo compatível e aponte a camera do seu celular aqui.",
@@ -88,11 +88,11 @@
             "dailyLimitRemaining": "restantes hoje",
             "requiredSignatures": "Assinaturas exigidas",
             "owners": "Donos",
-            "walletsDescription": "Esses são contratos que existem no blockchain e podem armazenar ether e outras moedas. Uma carteira pode ter várias contas como donas. Carteiras mantem um histórico mais preciso de transferências",
-            "walletsDescriptionNotEnoughFunds": "Uma vez que você obtiver ao menos 1 ether poderá criar contratos mais sofisticados como carteiras, que podem funcionar como contas conjuntas administradas por diversas contas e ter limites diários de saques. Para criar um contrato ainda mais personalizado, vá na aba  <em>Contratos</em>.",
-            "accountsDescription": "Contas são chaves privadas protegidas por uma senha, que podem armazenar ether, outras moedas baseadas no ethereum e controlar contratos. Contas não exibem transações recebidas.",
+            "walletsDescription": "Esses são contratos que existem no blockchain e podem armazenar soil e outras moedas. Uma carteira pode ter várias contas como donas. Carteiras mantem um histórico mais preciso de transferências",
+            "walletsDescriptionNotEnoughFunds": "Uma vez que você obtiver ao menos 1 soil poderá criar contratos mais sofisticados como carteiras, que podem funcionar como contas conjuntas administradas por diversas contas e ter limites diários de saques. Para criar um contrato ainda mais personalizado, vá na aba  <em>Contratos</em>.",
+            "accountsDescription": "Contas são chaves privadas protegidas por uma senha, que podem armazenar soil, outras moedas baseadas no ethereum e controlar contratos. Contas não exibem transações recebidas.",
             "buttons": {
-                "deposit": "Depositar Ether",
+                "deposit": "Depositar Soil",
                 "depositBitcoin": "Depositar com Bitcoin",
                 "copyAddress": "Copiar endereço",
                 "scanQRCode": "Mostrar código QR",
@@ -203,7 +203,7 @@
                     "description": "Um contrato controlado por diversas contas",
                     "text1": "Isso é uma carteira conjunta administradas por",
                     "text2": "contas. Você pode enviar até",
-                    "text3": "ether por dia.",
+                    "text3": "soil por dia.",
                     "text4": "Qualquer transação acima do limite diário requer a aprovação de",
                     "text5": "contas.",
                     "accountOwnersTitle": "Contas administradoras",
@@ -256,7 +256,7 @@
             "texts": {
                 "ownerPaysGas": "O combustível é pago pelo dono da carteira",
                 "sendAmount": "Você quer enviar <strong>__amount__</strong>.",
-                "sendAmountEquivalent": "Você quer enviar <strong>__amount__</strong> em ether, usando a taxa de câmbio de <a href=\"https://www.cryptocompare.com/coins/eth/overview/BTC\" target=\"_blank\">cryptocompare.com</a>.<br> Que atualmente é equivalente a  <strong>__etherAmount__</strong>.",
+                "sendAmountEquivalent": "Você quer enviar <strong>__amount__</strong> em soil, usando a taxa de câmbio de <a href=\"https://www.cryptocompare.com/coins/eth/overview/BTC\" target=\"_blank\">cryptocompare.com</a>.<br> Que atualmente é equivalente a  <strong>__etherAmount__</strong>.",
                 "sendToken": "Você quer enviar <strong>__amount__ __symbol__</strong> de <strong> __name__</strong>.",
                 "overDailyLimit": "<p class=\"over-daily\">A quantidade é acima do limite diário de __limit__ (of __total__ per day), então você vai precisar da aprovação de __count__ outra conta.</p>",
                 "overDailyLimit_plural": "<p class=\"over-daily\">A quantidade é acima do limite diário de __limit__ (of __total__ per day), então você vai precisar da aprovação de __count__ outras contas.</p>",
@@ -265,7 +265,7 @@
                 "noCodeInRecipient": "The recipient account is not a contract, so you can't execute anything. <strong> Put a contract address on the 'TO' field. </strong>",
                 "addData": "You can add extra data to send along with your transaction. If you leave the \"to\" field empty it will try to deploy a contract from your data.",
                 "dataNotExecutable": "The data seems not to be executabe, that means this transaction will use all the gas you provide.",
-                "cantEstimateGas": "We can't estimate your gas usage properly, as you need at least 1 ether in your account.",
+                "cantEstimateGas": "We can't estimate your gas usage properly, as you need at least 1 soil in your account.",
                 "estimatedGas": "Estimated required gas",
                 "timeTexts": {
                     "0": "uma grande quantidade de tempo (ou nunca)",
@@ -281,7 +281,7 @@
             "title": "<strong>Fichas</strong> customizadas",
             "subTitle": "Ficha adicionada",
             "admin": "__name__ (administração)",
-            "description": "Fichas são moedas, fichas colecionáveis ou outros tokens fungíveis construídos na plataforma Ethereum. Para que suas contas possam ver o seu saldo e enviar fichas, é necessário adicionar o endereço do token aqui. Você pode criar sua ficha modificando esse  <a href=\"https://ethereum.org/token#the-code\" target=\"_blank\">exemplo de ficha</a>. Leia mais sobre isso no nosso tutorial <a href=\"https://www.ethereum.org/token\" target=\"_blank\">como criar fichas no Ethereum (em inglês)</a>.",
+            "description": "Fichas são moedas, fichas colecionáveis ou outros tokens fungíveis construídos na plataforma Soil. Para que suas contas possam ver o seu saldo e enviar fichas, é necessário adicionar o endereço do token aqui. Você pode criar sua ficha modificando esse  <a href=\"https://ethereum.org/token#the-code\" target=\"_blank\">exemplo de ficha</a>. Leia mais sobre isso no nosso tutorial <a href=\"https://www.ethereum.org/token\" target=\"_blank\">como criar fichas no Soil (em inglês)</a>.",
             "deleteToken": "Você quer parar de observar a ficha <strong>__token__</strong>?",
             "addedToken": "Ficha __token__ adicinada na sua lista",
             "editedToken": "Ficha __token__ enviada",
